--- a/frontend_intranet (1).html
+++ b/frontend_intranet (1).html
@@ -24,7 +24,7 @@
   </div>
 
   <script>
-    const apiUrl = 'https://produccion-intranet.onrender.com'; // Reemplaza con tu URL real
+    const apiUrl = 'https://produccion-intranet-backend.onrender.com'; // Reemplaza con tu URL real
 
     document.getElementById('loginForm').addEventListener('submit', async function(event) {
       event.preventDefault();
