--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       const mensaje = document.getElementById('mensaje');
       mensaje.innerText = "";
 
-      const regexNomina = /^\d{6}$/;
+      const regexNomina = /^\d{4}$/;
 
       if (!regexNomina.test(nomina)) {
-        mensaje.innerText = "La nómina debe tener exactamente 6 dígitos numéricos";
+        mensaje.innerText = "La nómina debe tener exactamente 4 dígitos numéricos";
         return;
       }
 
@@ -61,9 +61,9 @@
         if (data.token) {
           localStorage.setItem('token', data.token);
           if (data.rol === 'operativo') {
-            window.location.href = 'formulario_habilitado_actualizado.html';
+            window.location.href = 'formulario.html';
           } else if (data.rol === 'supervisor' || data.rol === 'analista') {
-            window.location.href = 'resumen_supervisor_actualizado.html';
+            window.location.href = 'resumen.html';
           } else {
             mensaje.innerText = 'Rol no autorizado';
           }
