--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           if (data.rol === 'operativo') {
             window.location.href = 'formulario.html';
           } else if (data.rol === 'supervisor' || data.rol === 'analista') {
-            window.location.href = 'resumen_supervisor_actualizado.html';
+            window.location.href = 'resumen.html';
           } else {
             mensaje.innerText = 'Rol no autorizado';
           }
