--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
       <label for="rol" class="form-label">Rol</label>
       <select id="rol" class="form-select">
         <option value="">Seleccionar rol</option>
-        <option value="operativo">Operativo</option>
+        <option value="operador">Operador</option>
         <option value="supervisor">Supervisor</option>
         <option value="analista">Analista</option>
       </select>
