--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
       <label for="rol" class="form-label">Rol</label>
       <select id="rol" class="form-select">
         <option value="">Seleccionar rol</option>
-        <option value="produccion">Producción</option>
+        <option value="produccion">produccion</option>
         <option value="supervisor">Supervisor</option>
         <option value="analista">Analista</option>
       </select>
